--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /App/__pycache__
 /Client Side/.idea
-/Client Side/__pycache__
-/Client Side/venv
+/Client Side/node_modules
 /Server Side/.idea
+/Server Side/node_modules
 venv
 .idea
