--- a/Server Side/package.json
+++ b/Server Side/package.json
@@ -13,6 +13,7 @@
   "author": "Ofir and Omer",
   "license": "MIT",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.16.4",
     "mongoose": "^5.9.6",
     "morgan": "^1.9.1"
