--- a/Client Side/package.json
+++ b/Client Side/package.json
@@ -9,6 +9,7 @@
     "core-js": "^3.6.5",
     "react": "^16.13.0",
     "react-circular-progressbar": "^2.0.3",
+    "react-d3-speedometer": "^0.11.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
