--- a/Client Side/package.json
+++ b/Client Side/package.json
@@ -6,15 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "apexcharts": "^3.19.0",
     "core-js": "^3.6.5",
     "react": "^16.13.0",
-    "react-apexcharts": "^1.3.7",
     "react-circular-progressbar": "^2.0.3",
     "react-d3-speedometer": "^0.11.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
+    "react-rt-chart": "^2.0.0",
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27"
   },
