--- a/Client Side/package.json
+++ b/Client Side/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "mdbreact": "^4.27.0",
+    "moment": "^2.26.0",
     "react": "^16.13.0",
     "react-circular-progressbar": "^2.0.3",
     "react-d3-speedometer": "^0.11.0",
