--- a/Client Side/package.json
+++ b/Client Side/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-rt-chart": "^2.0.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27"
   },
   "scripts": {
@@ -41,5 +41,13 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-standard": "^4.0.1"
+  }
 }
